@@ -32,6 +32,7 @@ Gestion:
 - Possibilité de choisir l'adresse mail destinataire de l'information comme quoi un changement d'adresse mail responsable ou élèev a eu lieu.
 - Possibilité d'ajouter un préfixe au sujet des mails envoyés par Gepi.
 - Possibilité de donner l'accès à l'impression de leur Fiche Bienvenue pour les différents statuts depuis la page Gérer mon compte.
+- Possibilité de définir des messages d'information à faire apparaître dans 'Gérer mon compte' (messages éventuellement différents pour chaque statut).
 
 Divers:
 - Ajout d'une page pour que les parents puissent contrôler les informations élève/resp.
